syntax = "proto3";

package auth;
option go_package="proto/auth";

import "auth.general.proto";

service authService{
    rpc CheckToken(CheckTokenRequest) returns (Auth) {};
}